feat(admin): add admin-api
